# kedro-starter-poetry-dagster

./: LICENSE  README.md  cookiecutter.json  prompts.yml
{{ cookiecutter.repo_name }}/: .flake8  .gitignore  README.md  azure-pipelines-docs.yml  environment.yml  mkdocs.yml  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: staticwebapp.config.json
{{ cookiecutter.repo_name }}/docs/scripts/: gen_ref_pages.py
{{ cookiecutter.repo_name }}/docs/sections/Development Guide/: 01_tech_stack.md
{{ cookiecutter.repo_name }}/docs/sections/Development Guide/How to/: 02_coding.md  03_publishing.md
{{ cookiecutter.repo_name }}/docs/sections/Development Guide/Resources/: 02_mkdocs.md
{{ cookiecutter.repo_name }}/docs/sections/User Guide/: 01_installation.md  02_usage.md  index.md
{{ cookiecutter.repo_name }}/docs/stylesheets/: extra.css
{{ cookiecutter.repo_name }}/notebooks/: template-notebook.ipynb
{{ cookiecutter.repo_name }}/scripts/: launch.py  launch_dagster.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: __init__.py  __main__.py  pipeline_registry.py  settings.py
