# ~~~ PROJECT ~~~

[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.short_description }}"
authors = ["Nicholas Butterly <Email :: 2 - nicholas.butterly@aemo.com.au>"]
{% if cookiecutter.homepage != 'none' -%} homepage = "{{ cookiecutter.homepage }}" {% endif -%}
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
{{ cookiecutter.repo_name }} = "{{ cookiecutter.python_package }}.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.kedro]
package_name = "{{ cookiecutter.python_package }}"
project_name = "{{ cookiecutter.project_name }}"
kedro_init_version = "0.19.1"  # the version of kedro this starter was based on
source_dir = "src"

[tool.dagster]
module_name = "{{ cookiecutter.python_package }}"
code_location_name = "{{ cookiecutter.repo_name }}"

# ~~~ TOOLS ~~~

[tool.mypy]
python_version = "3.10"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
disable_error_code  = ["import-untyped", "index"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = []
line-length = 80
indent-width = 4

[tool.ruff.lint]
#  Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # Ignore import violations in all `__init__.py` files.
"**/{docs,site,build,dist}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
addopts = "-r=A --cov=src"
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "tests",
]

# ~~~ DEPENDENCIES ~~~

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.6.0"
kedro = "^0.19.1"
kedro-datasets = {extras = ["polars", "plotly", "matplotlib", "json", "yaml"], version = "^2.0.0"}
hydra-core = "^1.3.2"
pydantic = "^1.10"  # pinned to verion 1 for compatibility with kedro viz
dagster-polars = "^0.1.5"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.8.0"
mypy-extensions = ">=1.0.0"
ruff = ">=0.1.9"
flake8 = ">=7.0.0"
memray = { version = "^1.11.0", platform = "linux" }  # Only works on Linux

[tool.poetry.group.kedro-dev.dependencies]
kedro-viz = "^7.0.0"
jupyterlab = ">=3.0"
ipython = ">=8.10"
black = ">=22.0"
ipykernel = ">=6.28.0"

[tool.poetry.group.dagster-dev.dependencies]
dagster-webserver = "^1.6.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.4"
pytest-cov = ">=4.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-puml = "^1.2.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings-python = "^1.7.5"
mkdocs-redirects = "^1.2.1"
mkdocs-glightbox = "^0.3.6"
mkdocs-table-reader-plugin = "^2.0.3"
mike = "^2.0.0"
griffe = "^0.38.1"
griffe-fieldz = "^0.1.2"
